<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_principal"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_tarjeta"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="24dp"
            android:textColor="@color/texto_titulo" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numero_tarjeta"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/etCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_numero_tarjeta"
            android:inputType="number"
            android:maxLines="1"
            android:background="@drawable/edittext_background"
            android:padding="16dp"
            android:layout_marginBottom="16dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginEnd="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha_expiracion"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp" />

                <EditText
                    android:id="@+id/etExpiration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_expiracion"
                    android:inputType="number"
                    android:maxLines="1"
                    android:background="@drawable/edittext_background"
                    android:padding="16dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cvv"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp" />

                <EditText
                    android:id="@+id/etCVV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_cvv"
                    android:inputType="numberPassword"
                    android:maxLines="1"
                    android:background="@drawable/edittext_background"
                    android:padding="16dp" />

            </LinearLayout>

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_titular"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/etCardholderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombre_titular"
            android:inputType="textCapCharacters"
            android:maxLines="1"
            android:background="@drawable/edittext_background"
            android:padding="16dp"
            android:layout_marginBottom="16dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/direccion"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_direccion"
            android:inputType="textPostalAddress"
            android:maxLines="1"
            android:background="@drawable/edittext_background"
            android:padding="16dp"
            android:layout_marginBottom="16dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginEnd="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/codigo_postal"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp" />

                <EditText
                    android:id="@+id/etPostalCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_codigo_postal"
                    android:inputType="number"
                    android:maxLines="1"
                    android:background="@drawable/edittext_background"
                    android:padding="16dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ciudad"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp" />

                <EditText
                    android:id="@+id/etCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_ciudad"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:background="@drawable/edittext_background"
                    android:padding="16dp" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="24dp">

            <!-- Estado -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginEnd="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/estado"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp" />

                <EditText
                    android:id="@+id/etState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_estado"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:background="@drawable/edittext_background"
                    android:padding="16dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pais"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp" />

                <EditText
                    android:id="@+id/etCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_pais"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:background="@drawable/edittext_background"
                    android:padding="16dp" />

            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/btnSaveCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar_tarjeta"
            android:backgroundTint="@color/boton_oscuro"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:padding="12dp" />

    </LinearLayout>

</ScrollView>